--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/fondo.png);
+    ,url(../image/fondo.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -171,7 +171,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/trekking.jpg)
+    ,url(../image/trekking.jpg)
 }
 
 
@@ -181,7 +181,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/montaña.png)
+    ,url(../image/montaña.png)
 }
 
 .carta:nth-child(3) {
@@ -190,7 +190,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/dji.jpg)
+    ,url(../image/dji.jpg)
 }
 
 .carta:nth-child(4) {
@@ -199,7 +199,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/guia.jpg)
+    ,url(../image/guia.jpg)
 }
 
 .carta:nth-child(5) {
@@ -208,7 +208,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/mountain-bike.jpg)
+    ,url(../image/mountain-bike.jpg)
 }
 
 .carta:nth-child(6) {
@@ -217,7 +217,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/meditacion.jpg)
+    ,url(../image/meditacion.jpg)
 }
 
 .carta:nth-child(7) {
@@ -226,7 +226,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/muro.jpg)
+    ,url(../image/muro.jpg)
 }
 
 .carta:nth-child(8) {
@@ -235,7 +235,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/rafting.jpg)
+    ,url(../image/rafting.jpg)
 }
 
 .carta:nth-child(9) {
@@ -244,7 +244,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/bungee.jpg)
+    ,url(../image/bungee.jpg)
 }
 
 
@@ -254,7 +254,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/rapel.jpg)
+    ,url(../image/rapel.jpg)
 }
 
 
@@ -264,7 +264,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/cabalgata.jpg)
+    ,url(../image/cabalgata.jpg)
 }
 
 
@@ -274,7 +274,7 @@ header a:hover {
          rgba(0, 0, 0, 0.5),
          rgba(0, 0, 0, 0.5)
     )
-    ,url(/image/volcan.jpg)
+    ,url(../image/volcan.jpg)
 }
 
 
@@ -301,14 +301,10 @@ header a:hover {
     width: 350px;
     margin: auto;
     background:rgba(0, 0, 0, 0.4);
-    padding: 10px 20px;
     box-sizing: border-box;
     border-radius: 7px;
     padding: 50px;
 }
-
-
-
 
 
 #entra-ya {
@@ -335,7 +331,7 @@ header a:hover {
 
 
 #contacto-1{
-    background-image: url(/image/fondo-contacto.jpg);
+    background-image: url(../image/fondo-contacto.jpg);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -379,15 +375,6 @@ header a:hover {
     color: white;
     background-color:rgb(4, 167, 4);
 }
-
-button:hover {
-    background-color: rgb(35, 112, 35) ;
-    transition: all 0.2s;}
-
-
-
-
-
 
 footer p {
     margin:0;
@@ -456,7 +443,7 @@ footer .container {
 
     #somos-vencedores .img-container{
      background-image:
-     url(/image/joel-jasmin-forestbird-znoL1m6MD_k-unsplash.jpg) ;
+     url(../image/joel-jasmin-forestbird-znoL1m6MD_k-unsplash.jpg) ;
     background-size: cover;
     background-position: center center;
     height: 500px;
@@ -488,7 +475,6 @@ footer .container {
         width: 450px;
         margin: auto;
         background:rgba(0, 0, 0, 0.4);
-        padding: 10px 20px;
         box-sizing: border-box;
         border-radius: 7px;
         padding: 90px;
