--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,9 +11,7 @@ header {
         animation-delay: 1s;
     }  
     .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include flex (column, center)
     }
     nav {
         display: flex;
