--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "./base/typo";
 @import "./base/reset";
+@import "./utilities/mixins";
 @import "./utilities/variables";
 @import "./components/buttons";
 @import "./layout/header";
