--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+/*footer {
     p {
         margin:0;
         padding: 12px;
@@ -9,5 +9,36 @@ footer {
         display: flex;
         justify-content: center;
         align-items: flex-end;
+    }
+} */
+
+.pie-pagina {
+    width: 100%;
+    background:linear-gradient( rgb(37, 37, 37), rgb(95, 95, 95));
+    color: white;
+    .grupo-1 {
+        width: 100%;
+        max-width: 1200px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat (3, 1fr);
+        grid-gap: 50px;
+        padding: 45px 0px;
+        .box{
+            figure{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                     width: 250px;
+                }
+                h2 {
+                    margin-bottom: 25px;
+                    font-size: 20px;
+                }
+            }
+        }
     }
 }
