--- a/css/style.css
+++ b/css/style.css
@@ -161,23 +161,9 @@ header {
 #nuestras-salidas .carta:nth-child(12) {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../image/volcan.jpg); }
 
-#faq {
-  background-color: #5f3333;
-  color: white; }
-  #faq .container-faq {
-    width: 350px;
-    margin: auto;
-    background: rgba(0, 0, 0, 0.4);
-    box-sizing: border-box;
-    border-radius: 7px;
-    padding: 90px 50px; }
-    #faq .container-faq h2 {
-      color: #fff;
-      text-align: center;
-      margin: 0;
-      font-size: 30px;
-      margin-bottom: 20px;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+.faq {
+  padding: 30px 30px;
+  background-color: aliceblue; }
 
 #contacto-1 {
   background-image: url(../image/fondo-contacto.jpg);
@@ -234,31 +220,24 @@ header {
 } */
 .pie-pagina {
   width: 100%;
-  background: linear-gradient(#252525, #5f5f5f);
-  color: white; }
-  .pie-pagina .grupo-1 {
+  background-color: black;
+  color: white;
+  padding: 50px; }
+  .pie-pagina .box figure {
     width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat 3, 1fr;
-    grid-gap: 50px;
-    padding: 45px 0px; }
-    .pie-pagina .grupo-1 .box figure {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
-      .pie-pagina .grupo-1 .box figure img {
-        width: 250px; }
-      .pie-pagina .grupo-1 .box figure h2 {
-        margin-bottom: 25px;
-        font-size: 20px; }
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue; }
+    .pie-pagina .box figure img {
+      width: 250px; }
+    .pie-pagina .box figure h2 {
+      margin-bottom: 25px;
+      font-size: 20px; }
 
 @media (min-width: 768px) {
   header {
-    position: fixed;
     width: 100%; }
     header .container {
       flex-direction: row;
