--- a/scss/layout/_main-faq.scss
+++ b/scss/layout/_main-faq.scss
@@ -1,23 +1,4 @@
-#faq{  
-    background-color: rgb(95, 51, 51);
-    color: white;
-    .container-faq {
-        width: 350px;
-        margin: auto;
-        background:$filtro;
-        box-sizing: border-box;
-        border-radius: 7px;
-        padding: 90px 50px;
-        h2{
-            color: #fff;
-            text-align: center;
-            margin:0;
-            font-size: 30px;
-            margin-bottom: 20px;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-    }
+.faq {
+    padding: 30px 30px;
+    background-color: aliceblue;
 }
-
-
-
